--- a/BackEnd/auth/src/main/resources/application.properties
+++ b/BackEnd/auth/src/main/resources/application.properties
@@ -4,4 +4,4 @@ jwt.HEADER_AUTH=Authorization
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5432/logosdb?reWriteBatchedInserts=true
 spring.datasource.username=postgres
-spring.datasource.password=test
+spring.datasource.password=hun928
