--- a/BackEnd/session/build.gradle
+++ b/BackEnd/session/build.gradle
@@ -22,6 +22,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+	//gson 취약점 -> 2.8.6 => 2.9.0
+	implementation 'io.openvidu:openvidu-java-client:2.22.0' exclude module: 'com.google.code.gson:gson'
+	implementation 'com.google.code.gson:gson:2.9.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
