--- a/BackEnd/knowledge/src/main/resources/application.properties
+++ b/BackEnd/knowledge/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/logosdb?reWriteBatchedInserts=true
 spring.datasource.username=postgres
 spring.datasource.password=hun928
+server.port=8083
 
 logging.level.org.hibernate.engine.jdbc.batch.internal.BatchingBatch=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
