--- a/BackEnd/point/src/main/resources/application.properties
+++ b/BackEnd/point/src/main/resources/application.properties
@@ -4,5 +4,5 @@ jwt.HEADER_AUTH=Authorization
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/logosdb?reWriteBatchedInserts=true
 spring.datasource.username=postgres
-spring.datasource.password=test
+spring.datasource.password=hun928
 server.port = 8085
