--- a/FrontEnd/logos-front/package.json
+++ b/FrontEnd/logos-front/package.json
@@ -11,9 +11,12 @@
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "jwt-decode": "^3.1.2",
     "vue": "^2.7.8",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
