--- a/FrontEnd/logos-front/package.json
+++ b/FrontEnd/logos-front/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^3.1.2",
     "vue": "^2.7.8",
     "vue-jwt-decode": "^0.1.0",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
