--- a/BackEnd/point/src/main/resources/application.properties
+++ b/BackEnd/point/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/logosdb?reWriteBatchedIns
 spring.datasource.username=postgres
 spring.datasource.password=test
 server.port = 8085
+
+spring.data.web.pageable.default-page-size=10
