--- a/BackEnd/point/src/main/resources/application.properties
+++ b/BackEnd/point/src/main/resources/application.properties
@@ -4,7 +4,7 @@ jwt.HEADER_AUTH=Authorization
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/logosdb?reWriteBatchedInserts=true
 spring.datasource.username=postgres
-spring.datasource.password=test
+spring.datasource.password=hun928
 server.port = 8085
 
 spring.data.web.pageable.default-page-size=10
