--- a/BackEnd/knowledge/src/main/resources/application.properties
+++ b/BackEnd/knowledge/src/main/resources/application.properties
@@ -4,7 +4,7 @@ jwt.HEADER_AUTH=Authorization
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/logosdb?reWriteBatchedInserts=true
 spring.datasource.username=postgres
-spring.datasource.password=hun928
+spring.datasource.password=test
 server.port=8083
 
 logging.level.org.hibernate.engine.jdbc.batch.internal.BatchingBatch=DEBUG
