--- a/FrontEnd/logos-front/package.json
+++ b/FrontEnd/logos-front/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tiptap/starter-kit": "^2.0.0-beta.191",
+    "@tiptap/vue-2": "^2.0.0-beta.84",
     "@vueform/slider": "^2.1.2",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.1",
