--- a/FrontEnd/logos-front/package.json
+++ b/FrontEnd/logos-front/package.json
@@ -8,14 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@tiptap/starter-kit": "^2.0.0-beta.191",
-    "@tiptap/vue-2": "^2.0.0-beta.84",
+    "@toast-ui/vue-editor": "^3.2.0",
     "@vueform/slider": "^2.1.2",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "jwt-decode": "^3.1.2",
+    "remixicon": "^2.5.0",
     "vue": "^2.7.8",
     "vue-jwt-decode": "^0.1.0",
     "vue-moment": "^4.1.0",
