--- a/FrontEnd/logos-front/package.json
+++ b/FrontEnd/logos-front/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@tiptap/starter-kit": "^2.0.0-beta.191",
     "@tiptap/vue-2": "^2.0.0-beta.84",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
+    "@toast-ui/vue-editor": "^3.2.0",
     "@vueform/slider": "^2.1.2",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.1",
