--- a/BackEnd/s3/build.gradle
+++ b/BackEnd/s3/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.1'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 tasks.named('test') {
