--- a/BackEnd/s3/src/main/resources/application.properties
+++ b/BackEnd/s3/src/main/resources/application.properties
@@ -5,7 +5,7 @@ jwt.HEADER_AUTH=Authorization
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/logosdb?reWriteBatchedInserts=true
 spring.datasource.username=postgres
-spring.datasource.password=test
+spring.datasource.password=hun928
 
 media.BUCKET=logosmedia-bucket
 media.FILE_EXTENSION_SEPARATOR=.
