--- a/FrontEnd/logos-front/package.json
+++ b/FrontEnd/logos-front/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^3.1.2",
     "remixicon": "^2.5.0",
     "vue": "^2.7.8",
+    "vue-croppa": "^1.3.8",
     "vue-jwt-decode": "^0.1.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
