--- a/FrontEnd/logos-front/package.json
+++ b/FrontEnd/logos-front/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "jwt-decode": "^3.1.2",
+    "openvidu-browser": "^2.22.0",
     "remixicon": "^2.5.0",
     "vue": "^2.7.8",
     "vue-croppa": "^1.3.8",
