세션 페이지 참가 테스트 중

--- a/BackEnd/session/src/main/resources/application.properties
+++ b/BackEnd/session/src/main/resources/application.properties
@@ -6,7 +6,7 @@ jwt.HEADER_AUTH=Authorization
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/logosdb?reWriteBatchedInserts=true
 spring.datasource.username=postgres
-spring.datasource.password=hun928
+spring.datasource.password=test
 
 server.port=8082
 server.ssl.key-store=classpath:keystore.jks
