--- a/FrontEnd/logos-front/package.json
+++ b/FrontEnd/logos-front/package.json
@@ -23,6 +23,7 @@
     "vue-jwt-decode": "^0.1.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
+    "vue-star-rating": "^1.7.0",
     "vue2-daterange-picker": "^0.6.8",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
