--- a/BackEnd/session/src/main/resources/application-prod.properties
+++ b/BackEnd/session/src/main/resources/application-prod.properties
@@ -1,4 +1,6 @@
-openvidu.OPENVIDU_URL=${OPENVIDU_URL}
+openvidu.PROTOCOL=https://
+openvidu.OPENVIDU_HOST=${OPEN_VIDU_SERVICE_HOST}
+openvidu.OPENVIDU_PORT=${OPEN_VIDU_SERVICE_PORT}
 openvidu.SECRET=${OPENVIDU_SECRET}
 jwt.SECRET_KEY=${JWT_SECRET_KEY}
 jwt.EXPIRE_MINUTES=6000
